<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/storie_header_title"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/storie_name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/storie_state"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/state"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/storie_responsibles"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        android:text="@string/responsibles"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/storie_effort_left"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/_el_"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/storie_original_estimate"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/_oe_"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/storie_spend_effort"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/es"
        android:textColor="@android:color/black" />

</LinearLayout>