<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name"
            android:layout_width="@dimen/iteration_titles"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/name" />

        <TextView
            android:id="@+id/iteration_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/name"
            android:layout_toRightOf="@id/name" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="@dimen/iteration_titles"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/iteration_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/start_date"
            android:layout_toRightOf="@id/start_date" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="@dimen/iteration_titles"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/iteration_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/end_date"
            android:layout_toRightOf="@id/end_date" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent"
        android:groupIndicator="@null" >
    </ExpandableListView>

</LinearLayout>