<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/traslucent_black"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/margin_login" >

        <LinearLayout
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_login_title"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/spent_effort"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp" >

                <TableLayout
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:isScrollContainer="true"
                    android:stretchColumns="0,1" >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="5dp"
                            android:text="@string/date" />

                        <EditText
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/date"
                            android:inputType="datetime"
                            android:textSize="12sp"
                            android:singleLine="true" />

                        <ImageButton 
                            android:id="@+id/datepicker_button"
                            android:background="@android:color/transparent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_calendar" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="5dp"
                            android:text="@string/responsibles" />

                        <EditText
                            android:id="@+id/responsibles"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textSize="12sp"
                            android:hint="@string/responsibles" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="5dp"
                            android:text="@string/effort_spent" />

                        <EditText
                            android:id="@+id/effort_spent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789."
                            android:textSize="12sp"
                            android:inputType="number" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="5dp"
                            android:text="@string/comment" />

                        <EditText
                            android:id="@+id/comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/comment"
                            android:textSize="12sp"
                            android:singleLine="true" />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/save" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>